--- a/src/styles.css
+++ b/src/styles.css
@@ -1,66 +1,200 @@
-body {
-  font-family: sans-serif;
+* {
+  font-family: iranyekan, tahoma, "Cabin", sans-serif;
+  box-sizing: border-box;
 }
 
-.container {
-  display: grid;
-  grid-template-columns: 1fr 5fr 2fr;
-  grid-template-rows: 1fr 0.25fr 3fr 1fr 0.8fr;
-  grid-gap: 0.6rem;
-  height: 90%;
-  width: 90%;
-  background-color: lightblue;
-  padding: 0.5rem;
+.content::after {
+  content: "";
+  clear: both;
+  display: block;
 }
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+
+.col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
+}
+
 
 .header {
-  font-size: 4rem;
-  text-align: center;
-  padding: 4rem;
-  grid-column: 1/4;
-  background-color: #fff;
+  font-size: 0.7rem;
+  display: flex;
+  padding: 0.7rem;
+  color: #ffffff;
+  padding: 10px;
+  justify-content: end;
+  box-shadow: 0 2px 9px -2px rgba(0, 0, 0, 0.2);
+}
+
+.header > img {
+  width: 10rem;
+  height: 5rem;
+  border-radius: 5%;
+  object-fit: cover;
+}
+.items {
+  margin-right: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.item {
+  margin-right: 1rem;
+  color: rgb(71, 65, 65);
+}
+.item:hover {
+  color: rgb(202, 58, 58);
+  cursor: pointer;
 }
 
 .meno {
-  font-size: 2rem;
-
+  display: flex;
+  justify-content: end;
   text-align: center;
+  font-size: 0.6rem;
   padding: 1rem;
   grid-column: 1/4;
-  background-color: #fff;
+  border-bottom: 1px solid rgb(27, 4, 4);
 }
-.leftContent {
-  font-size: 2rem;
-
-  text-align: center;
-  padding: 1rem;
-  background-color: #fff;
+.Menu_Item {
+  margin-right: 0.8rem;
 }
-.mainContent {
-  font-size: 3rem;
-
-  text-align: center;
-  padding: 1rem;
-  background-color: #fff;
+.Menu_Item:hover {
+  color: rgb(241, 31, 31);
+  cursor: pointer;
 }
-.rightContent {
-  font-size: 2rem;
 
-  text-align: center;
-  padding: 1rem;
-  background-color: #fff;
+
+ .leftSide {
+  padding: 8px;
+  margin-bottom: 7px;
+  background-color: #165b74;
+  color: #f5e4e4;
+  box-shadow: 0 3px 6px 6px rgba(0, 0, 0, 0.2) ;
+  border-radius: 1%;
 }
-.news {
-  text-align: center;
-  font-size: 1.5rem;
 
-  grid-column: 1/4;
-  background-color: #fff;
+.leftSide h4{
+  text-align: center;
+}
+
+.leftSide p{
+  text-align: right;
+  font-size: .8rem;
+    line-height: 1.6;
+
+}
+
+.col-6 img {
+  width: 17rem;
+}
+
+.col-6 div{
+  display: flex;
+}
+
+.col-6 div >h3 {
+  text-align: center;
+  padding: .5rem;
+  font-size: .9rem;
+}
+
+ p {
+  text-align: right;
+  font-size: .8rem;
+    line-height: 1.6;
+
+}
+
+.rightSide {
+  background-color: #165b74;
+  padding: 15px;
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+  box-shadow: 0 3px 6px 6px rgba(0, 0, 0, 0.2) ;
+}
+
+.rightSide img{
+  width: 10rem;
+}
+
+.Carti{
+  border:1px solid black;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 .footer {
+  background-color: #06242e;
+  color: #ffffff;
   text-align: center;
-  font-size: 1.5rem;
-
-  grid-column: 1/4;
-  background-color: #fff;
+  font-size: 12px;
+  padding: 15px;
+}
+.icons{
+  display: flex;
+  justify-content: center;
+}
+.icon{
+  margin-right: 1.3rem;
+}
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+  .header > img {
+    width: 5rem;
+  }
+  .item {
+    margin-right: 0.4rem;
+    font-size: 0.55rem;
+    font-weight: 520;
+  }
+  .Menu_Item {
+    margin-right: 0.3rem;
+    font-size: 0.55rem;
+    font-weight: 520;
+  }
+  .rightSide img{
+  width: 15rem;
+}
 }
